# zfuel

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/: CONTRIBUTING.md
.github/workflows/: fuzz.yml  main.yml  publish.yml
docs/: technical.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_fee_calculations.rs  fuzz_fraction.rs  fuzz_fraction_operations.rs  fuzz_fuel.rs  fuzz_fuel_operations.rs  fuzz_fuel_serialization.rs  fuzz_fuel_string.rs  fuzz_invariant.rs
src/: error.rs  fee.rs  fraction.rs  fuel.rs  lib.rs  precision.rs  time.rs
