[workspace.package]
edition = "2021"

[package]
name = "zfuel"
version = "1.0.0"
description = "ZFuel types used for a mutual credit currency"
homepage = "https://github.com/unyt-acct/zfuel"
license = "Apache-2.0"
authors = ["zo-el <joelulahanna@gmail.com>"]
keywords = [ "holochain", "unyt", "hdk", "hdk-helpers"]
categories = [ "cryptography" ]
edition.workspace = true

[dependencies]
hdi = "=0.5.0-dev.15"
lazy_static = "1.4.0"
regex = "1.1.2"
serde = "1.0"
thiserror = "1.0"
nom = "7.1.3"

[lib]
name = "zfuel"
path = "src/lib.rs"
# "cargo test --doc" doctests are not performed with the "cdylib" crate-type
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
