[workspace]
members = [
    ".",
    "fuzz"
]

[workspace.package]
edition = "2021"

[package]
name = "zfuel"
version = "0.3.1"
description = "ZFuel types used for a mutual credit accounting system"
homepage = "https://github.com/zo-el/zfuel"
license = "Apache-2.0"
authors = ["zo-el <joelulahanna@gmail.com>"]
keywords = [ "crypto-integers", "math", "mutual-credit", "zfuel" ]
categories = [ "cryptography" ]
edition.workspace = true

[dependencies]
lazy_static = "1.4.0"
regex = "1.1.2"
serde = "1.0"
thiserror = "2.0.6"
nom = "7.1.3"
holochain_wasmer_common = "0.0.101"

[lib]
name = "zfuel"
path = "src/lib.rs"
# "cargo test --doc" doctests are not performed with the "cdylib" crate-type
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
