[package]
name = "zfuel_fuzz"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.zfuel]
path = ".."

[[bin]]
name = "fuzz_fuel"
path = "fuzz_targets/fuzz_fuel.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fraction"
path = "fuzz_targets/fuzz_fraction.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fuel_string"
path = "fuzz_targets/fuzz_fuel_string.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fuel_operations"
path = "fuzz_targets/fuzz_fuel_operations.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fraction_operations"
path = "fuzz_targets/fuzz_fraction_operations.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fee_calculations"
path = "fuzz_targets/fuzz_fee_calculations.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fuel_serialization"
path = "fuzz_targets/fuzz_fuel_serialization.rs"
test = false
doc = false
bench = false
